--- a/index.html
+++ b/index.html
@@ -1,19 +1,79 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
     <meta charset="UTF-8">
     <title>Sistema de mensajes</title>
+    <!--
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/mensaje.css">
+    -->
 	<style>@import url(http://fonts.googleapis.com/css?family=Open+Sans);</style>
+    <!-- Bootstrap -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+    <!-- End Bootstrap Include -->
+
+    <script src="js/index.js"></script>
+
 </head>
 <body>
-    <div class="login">
-		<h1>Autentificación de usuario</h1>
-		<form method="post" action="autentifica.php">
-			<input type="text" name="Usuario" placeholder="Username" />
-			<input type="password" name="Clave" placeholder="Password" />
-			<button type="submit" class="btn btn-primary btn-block btn-large">Entrar</button>
-		</form>
-	</div>
+
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container justify-content-center">
+            <a class="navbar-brand text-white" href="/">Bienvenido al Sistema de Mensajes</a>
+        </div>
+    </nav>
+    <br>
+
+    <div class="container">
+
+        <div id="logbtn">
+
+            <div class="row justify-content-center">
+                <button type="button" onclick="showLogin()" class="btn btn-outline-dark">Login</button>
+            </div>
+            <br>
+            <div class="row justify-content-center">
+                <button type="button" onclick="showRegistration()" class="btn btn-outline-dark">Sign Up</button>
+            </div>
+
+        </div>
+
+        <!-- Div a mostrar cuando se pulse el boton de login -->
+        <div id="login-div" class="row justify-content-center" hidden>
+
+            <form method="post" action="autentifica.php">
+                <div class="row justify-content-center">
+                    <input class="form-control" type="text" name="Usuario" placeholder="Username" />
+                    <input class="form-control" type="password" name="Clave" placeholder="Password" />
+                    <button type="submit" class="btn btn-outline-dark btn-block">Login</button>
+                </div>
+            </form>
+
+        </div>
+
+        <!-- Div a mostrar cuando se pulse el boton de sign up -->
+        <div id="reg-div" class="row justify-content-center" hidden>
+
+            <form method="post" action="registra.php">
+                <div class="row justify-content-center">
+                    <input class="form-control" type="text" name="Correo" placeholder="Email" />
+                    <input class="form-control" type="text" name="Usuario" placeholder="Username" />
+                    <input class="form-control" type="password" name="Clave" placeholder="Password" />
+                    <button type="submit" class="btn btn-outline-dark btn-block">Sign Up</button>
+                </div>
+            </form>
+
+        </div>
+
+    </div>
+    <form action="updateDB.php">
+        <button type="submit">Update DB</button>
+    </form>
+
 </body>
 </html>
