--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <div id="logbtn">
 
+            <!-- Funciones showLogin() y showRegistration() para usar jquery (evitar recargar página) -->
+
             <div class="row justify-content-center">
                 <button type="button" onclick="showLogin()" class="btn btn-outline-dark">Login</button>
             </div>
@@ -43,7 +45,7 @@
 
         </div>
 
-        <!-- Div a mostrar cuando se pulse el boton de login -->
+        <!-- Div a mostrar cuando se pulse el boton de login. Con jQuery se elimina el atributo hidden si es necesario -->
         <div id="login-div" class="row justify-content-center" hidden>
 
             <form method="post" action="autentifica.php">
@@ -56,7 +58,7 @@
 
         </div>
 
-        <!-- Div a mostrar cuando se pulse el boton de sign up -->
+        <!-- Div a mostrar cuando se pulse el boton de sign up. Con jQuery se elimina el atributo hidden si es necesario -->
         <div id="reg-div" class="row justify-content-center" hidden>
 
             <form method="post" action="registra.php">
@@ -71,6 +73,8 @@
         </div>
 
     </div>
+
+    <!-- Botón para actualizar Base de Datos con contraseñas encriptadas. No funciona.-->
     <form action="updateDB.php">
         <button type="submit">Update DB</button>
     </form>
